--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Grupo OS Vigilância - Soluções em segurança patrimonial e serviços corporativos.">
     <meta name="keywords" content="segurança patrimonial, vigilância, portaria, segurança corporativa">
-    <meta name="author" content="Grupo OS Vigilância">
+    <meta name="author" content="Grupo OF Vigilância">
     <title>Grupo OS Vigilância</title>
 
     <!-- CSS -->
@@ -21,7 +21,7 @@
         <div class="container nav-container">
             <div class="logo">
                 <!-- LOGO (SUBSTITUIR POSTERIORMENTE) -->
-                <img src="hub_d_imagens/logo.png" alt="Grupo OS Vigilância">
+                <img src="hub_d_imagens/logo.jpg" alt="Grupo OF Vigilância">
             </div>
 
             <nav class="nav">
@@ -77,47 +77,47 @@
 
             <div class="grid-segmentos">
                 <div class="card">
-                    <img src="hub_d_imagens/figura1.png" alt="Segurança Patrimonial">
+                    <img src="hub_d_imagens/figura1.jpg" alt="Segurança Patrimonial">
                     <h3>Segurança Patrimonial</h3>
                 </div>
 
                 <div class="card">
-                    <img src="hub_d_imagens/figura2.png" alt="Condomínios">
+                    <img src="hub_d_imagens/figura2.jpg" alt="Condomínios">
                     <h3>Condomínios</h3>
                 </div>
 
                 <div class="card">
-                    <img src="hub_d_imagens/figura3.png" alt="Shopping e Varejo">
+                    <img src="hub_d_imagens/figura3.jpg" alt="Shopping e Varejo">
                     <h3>Shopping e Varejo</h3>
                 </div>
 
                 <div class="card">
-                    <img src="hub_d_imagens/figura4.png" alt="Indústria">
+                    <img src="hub_d_imagens/figura4.jpg" alt="Indústria">
                     <h3>Indústria</h3>
                 </div>
 
                 <div class="card">
-                    <img src="hub_d_imagens/figura5.png" alt="Portos">
+                    <img src="hub_d_imagens/figura5.jpg" alt="Portos">
                     <h3>Portos</h3>
                 </div>
 
                 <div class="card">
-                    <img src="hub_d_imagens/figura6.png" alt="Transportes e Logística">
+                    <img src="hub_d_imagens/figura6.jpg" alt="Transportes e Logística">
                     <h3>Transportes e Logística</h3>
                 </div>
 
                 <div class="card">
-                    <img src="hub_d_imagens/figura7.png" alt="Saúde">
+                    <img src="hub_d_imagens/figura7.jpg" alt="Saúde">
                     <h3>Saúde</h3>
                 </div>
 
                 <div class="card">
-                    <img src="hub_d_imagens/figura8.png" alt="Educação">
+                    <img src="hub_d_imagens/figura8.jpg" alt="Educação">
                     <h3>Educação</h3>
                 </div>
 
                 <div class="card">
-                    <img src="hub_d_imagens/figura9.png" alt="Grandes Eventos">
+                    <img src="hub_d_imagens/figura9.jpg" alt="Grandes Eventos">
                     <h3>Grandes Eventos</h3>
                 </div>
             </div>
@@ -129,7 +129,7 @@
         <div class="container footer-content">
             <hr>
             <img src="hub_d_imagens/logo.png" alt="Grupo OS Vigilância">
-            <p><strong>Grupo OS Vigilância</strong></p>
+            <p><strong>Grupo OF Vigilância</strong></p>
             <p>Telefone: 21-2692-6852</p>
         </div>
     </footer>
