--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Grupo OS Vigilância - Soluções em segurança patrimonial e serviços corporativos.">
     <meta name="keywords" content="segurança patrimonial, vigilância, portaria, segurança corporativa">
     <meta name="author" content="Grupo OF Vigilância">
-    <title>Grupo OS Vigilância</title>
+    <title>Grupo OF Vigilância</title>
 
     <!-- CSS -->
     <link rel="stylesheet" href="static/css/style.css">
@@ -21,7 +21,7 @@
         <div class="container nav-container">
             <div class="logo">
                 <!-- LOGO (SUBSTITUIR POSTERIORMENTE) -->
-                <img src="hub_d_imagens/logo.jpg" alt="Grupo OF Vigilância">
+                <img src="hub_de_imagens/logo.jpg" alt="Grupo OF Vigilância">
             </div>
 
             <nav class="nav">
@@ -41,7 +41,7 @@
 
     <!-- ================= FULL BANNER ================= -->
     <section class="banner">
-        <img src="hub_d_imagens/Banner_Principal.png" alt="Banner Principal">
+        <img src="hub_de_imagens/Banner_Principal.png" alt="Banner Principal">
     </section>
 
     <!-- ================= EMPRESA ================= -->
@@ -77,47 +77,47 @@
 
             <div class="grid-segmentos">
                 <div class="card">
-                    <img src="hub_d_imagens/figura1.jpg" alt="Segurança Patrimonial">
+                    <img src="hub_de_imagens/figura1.jpg" alt="Segurança Patrimonial">
                     <h3>Segurança Patrimonial</h3>
                 </div>
 
                 <div class="card">
-                    <img src="hub_d_imagens/figura2.jpg" alt="Condomínios">
+                    <img src="hub_de_imagens/figura2.jpg" alt="Condomínios">
                     <h3>Condomínios</h3>
                 </div>
 
                 <div class="card">
-                    <img src="hub_d_imagens/figura3.jpg" alt="Shopping e Varejo">
+                    <img src="hub_de_imagens/figura3.jpg" alt="Shopping e Varejo">
                     <h3>Shopping e Varejo</h3>
                 </div>
 
                 <div class="card">
-                    <img src="hub_d_imagens/figura4.jpg" alt="Indústria">
+                    <img src="hub_de_imagens/figura4.jpg" alt="Indústria">
                     <h3>Indústria</h3>
                 </div>
 
                 <div class="card">
-                    <img src="hub_d_imagens/figura5.jpg" alt="Portos">
+                    <img src="hub_de_imagens/figura5.jpg" alt="Portos">
                     <h3>Portos</h3>
                 </div>
 
                 <div class="card">
-                    <img src="hub_d_imagens/figura6.jpg" alt="Transportes e Logística">
+                    <img src="hub_de_imagens/figura6.jpg" alt="Transportes e Logística">
                     <h3>Transportes e Logística</h3>
                 </div>
 
                 <div class="card">
-                    <img src="hub_d_imagens/figura7.jpg" alt="Saúde">
+                    <img src="hub_de_imagens/figura7.jpg" alt="Saúde">
                     <h3>Saúde</h3>
                 </div>
 
                 <div class="card">
-                    <img src="hub_d_imagens/figura8.jpg" alt="Educação">
+                    <img src="hub_de_imagens/figura8.jpg" alt="Educação">
                     <h3>Educação</h3>
                 </div>
 
                 <div class="card">
-                    <img src="hub_d_imagens/figura9.jpg" alt="Grandes Eventos">
+                    <img src="hub_de_imagens/figura9.jpg" alt="Grandes Eventos">
                     <h3>Grandes Eventos</h3>
                 </div>
             </div>
@@ -128,7 +128,7 @@
     <footer id="contatos" class="footer">
         <div class="container footer-content">
             <hr>
-            <img src="hub_d_imagens/logo.png" alt="Grupo OS Vigilância">
+            <img src="hub_de_imagens/logo.jpg" alt="Grupo OS Vigilância">
             <p><strong>Grupo OF Vigilância</strong></p>
             <p>Telefone: 21-2692-6852</p>
         </div>
