--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="container nav-container">
             <div class="logo">
                 <!-- LOGO (SUBSTITUIR POSTERIORMENTE) -->
-                <img src="hub_de_imagens/logo.jpg" alt="Grupo OF Vigilância">
+                <img src="hub_de_imagens/logo.JPG" alt="Grupo OF Vigilância">
             </div>
 
             <nav class="nav">
@@ -128,7 +128,7 @@
     <footer id="contatos" class="footer">
         <div class="container footer-content">
             <hr>
-            <img src="hub_de_imagens/logo.jpg" alt="Grupo OS Vigilância">
+            <img src="hub_de_imagens/logo.JPG" alt="Grupo OS Vigilância">
             <p><strong>Grupo OF Vigilância</strong></p>
             <p>Telefone: 21-2692-6852</p>
         </div>
