--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Grupo OS Vigilância - Soluções em segurança patrimonial e serviços corporativos.">
+    <meta name="description" content="Grupo OF Vigilância - Soluções em segurança patrimonial e serviços corporativos.">
     <meta name="keywords" content="segurança patrimonial, vigilância, portaria, segurança corporativa">
     <meta name="author" content="Grupo OF Vigilância">
     <title>Grupo OF Vigilância</title>
@@ -21,7 +21,7 @@
         <div class="container nav-container">
             <div class="logo">
                 <!-- LOGO (SUBSTITUIR POSTERIORMENTE) -->
-                <img src="hub_de_imagens/logo.JPG" alt="Grupo OF Vigilância">
+                <img src="hub_de_imagens/logo.png" alt="Grupo OF Vigilância">
             </div>
 
             <nav class="nav">
