--- a/index.html
+++ b/index.html
@@ -77,32 +77,32 @@
 
             <div class="grid-segmentos">
                 <div class="card">
-                    <img src="hub_de_imagens/figura1.JPG" alt="Segurança Patrimonial">
+                    <img src="hub_de_imagens/Figura1.JPG" alt="Segurança Patrimonial">
                     <h3>Segurança Patrimonial</h3>
                 </div>
 
                 <div class="card">
-                    <img src="hub_de_imagens/figura2.JPG" alt="Condomínios">
+                    <img src="hub_de_imagens/Figura2.JPG" alt="Condomínios">
                     <h3>Condomínios</h3>
                 </div>
 
                 <div class="card">
-                    <img src="hub_de_imagens/figura3.JPG" alt="Shopping e Varejo">
+                    <img src="hub_de_imagens/Figura3.JPG" alt="Shopping e Varejo">
                     <h3>Shopping e Varejo</h3>
                 </div>
 
                 <div class="card">
-                    <img src="hub_de_imagens/figura4.JPG" alt="Indústria">
+                    <img src="hub_de_imagens/Figura4.JPG" alt="Indústria">
                     <h3>Indústria</h3>
                 </div>
 
                 <div class="card">
-                    <img src="hub_de_imagens/figura5.JPG" alt="Portos">
+                    <img src="hub_de_imagens/Figura5.JPG" alt="Portos">
                     <h3>Portos</h3>
                 </div>
 
                 <div class="card">
-                    <img src="hub_de_imagens/figura6.JPG" alt="Transportes e Logística">
+                    <img src="hub_de_imagens/Figura6.JPG" alt="Transportes e Logística">
                     <h3>Transportes e Logística</h3>
                 </div>
 
@@ -112,12 +112,12 @@
                 </div>
 
                 <div class="card">
-                    <img src="hub_de_imagens/figura8.JPG" alt="Educação">
+                    <img src="hub_de_imagens/Figura8.JPG" alt="Educação">
                     <h3>Educação</h3>
                 </div>
 
                 <div class="card">
-                    <img src="hub_de_imagens/figura9.JPG" alt="Grandes Eventos">
+                    <img src="hub_de_imagens/Figura9.JPG" alt="Grandes Eventos">
                     <h3>Grandes Eventos</h3>
                 </div>
             </div>
