--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                 </div>
 
                 <div class="card">
-                    <img src="hub_de_imagens/figura7.JPG" alt="Saúde">
+                    <img src="hub_de_imagens/Figura7.JPG" alt="Saúde">
                     <h3>Saúde</h3>
                 </div>
 
