--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
             <hr>
             <img src="hub_de_imagens/logo.png" alt="Grupo OS Vigilância">
             <p><strong>Grupo OF Vigilância</strong></p>
-            <p>Telefone: 21-2692-6852</p>
+            <p> Rua Maria da Glória Baltar, 23 - Nilópolis - Telefone: 21-2692-6852</p>
         </div>
     </footer>
 
