--- a/index.html
+++ b/index.html
@@ -44,15 +44,19 @@
         <img src="hub_de_imagens/Banner_Principal.png" alt="Banner Principal">
     </section>
 
-    <!-- ================= EMPRESA ================= -->
+     <!-- ================= EMPRESA ================= -->
     <section id="empresa" class="section">
         <div class="container">
             <h2>Empresa</h2>
             <div class="content">
                 <!-- TEXTO INSTITUCIONAL SERÁ INSERIDO AQUI -->
                 <p>
-                    <!-- Espaço reservado para descrição institucional futura -->
+                   O Grupo OS Vigilância atua há mais de 20 anos no mercado, oferecendo soluções completas em segurança patrimonial, 
                 </p>
+                <p>
+                    controle de acesso e monitoramento corporativo. Nossa equipe é altamente treinada, comprometida com excelência operacional e atendimento personalizado.
+                </p>   
+            
             </div>
         </div>
     </section>
