--- a/index.html
+++ b/index.html
@@ -68,11 +68,11 @@
             <div class="content">
                 <!-- TEXTO DOS SERVIÇOS SERÁ INSERIDO AQUI -->
                 <p>
-                   A OF Vigilância atua com excelência em segurança privada, oferecendo soluções estratégicas e personalizadas para proteção patrimonial e controle de acesso.
+                   A OF Vigilância atua com excelência em segurança privada, oferecendo soluções estratégicas e personalizadas para proteção patrimonial 
                 </p>
            
                <p>
-                    Possui sólida experiência na atuação em grandes eventos, garantindo organização, prevenção de riscos e resposta eficiente
+                    e controle de acesso. Possui sólida experiência na atuação em grandes eventos, garantindo organização, prevenção de riscos e resposta eficiente
                </p>
             
                <p>
