--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <div class="content">
                 <!-- TEXTO DOS SERVIÇOS SERÁ INSERIDO AQUI -->
                 <p>
-                   A OF Vigilância atua com excelência em segurança privada, oferecendo soluções estratégicas e personalizadas para proteção patrimonial 
+                   Temos um portifólio de excelência no segmento de segurança privada, oferecendo soluções estratégicas e personalizadas para proteção patrimonial 
                 </p>
            
                <p>
