--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
             <div class="content">
                 <!-- TEXTO INSTITUCIONAL SERÁ INSERIDO AQUI -->
                 <p>
-                   O Grupo OS Vigilância atua há mais de 20 anos no mercado, oferecendo soluções completas em segurança patrimonial, 
+                   O Grupo OS Vigilância atua há mais de 20 anos no mercado, oferecendo soluções completas em segurança patrimonial, controle de acesso
                 </p>
                 <p>
-                    controle de acesso e monitoramento corporativo. Nossa equipe é altamente treinada, comprometida com excelência operacional e atendimento personalizado.
+                     e monitoramento corporativo. Nossa equipe é altamente treinada, comprometida com excelência operacional e atendimento personalizado.
                 </p>   
             
             </div>
