--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <div class="content">
                 <!-- TEXTO INSTITUCIONAL SERÁ INSERIDO AQUI -->
                 <p>
-                   O Grupo OS Vigilância atua há mais de 20 anos no mercado, oferecendo soluções completas em segurança patrimonial, controle de acesso
+                   O Grupo OF Vigilância atua há mais de 20 anos no mercado, oferecendo soluções completas em segurança patrimonial, controle de acesso
                 </p>
                 <p>
                      e monitoramento corporativo. Nossa equipe é altamente treinada, comprometida com excelência operacional e atendimento personalizado.
