--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 </p>
            
                <p>
-                    e controle de acesso. Possui sólida experiência na atuação em grandes eventos, garantindo organização, prevenção de riscos e resposta eficiente
+                    e controle de acesso. Possuimos sólida experiência na atuação em grandes eventos, garantindo organização, prevenção de riscos e resposta eficiente
                </p>
             
                <p>
